--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -12,7 +12,7 @@
         {% endfor %}
         {% endif %}
         
-        <form method="post">
+        <form method="post" onsubmit="openLoader()">
             {% if form.non_field_errors %}
                 <h3 class="text-2xl font-semibold text-primary text-center mb-6">{{ form.non_field_errors }}</h3>
             {% endif %}
@@ -25,7 +25,15 @@
                 {{ form.password.label_tag }}
                 {{ form.password }}
             </div>
-            <button type="submit" class="w-full bg-primary text-primary-foreground p-3 rounded-lg hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary text-white">Sign In</button>
+            <div>
+                <button type="submit" id="NoloadingModal" class="w-full bg-primary text-primary-foreground p-3 rounded-lg text-white">LogIn</button>
+                <div id="loadingModal" style="display: none;" class="text-white">
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
+            </div>
+            </div>
         </form>
     </div>
 </div>
