--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -5,7 +5,7 @@
 <div class="min-h-screen flex items-center justify-center bg-background">
     <div class="bg-card shadow-lg rounded-lg p-8 max-w-sm w-full">
         <h2 class="text-2xl font-semibold text-primary text-center mb-6 text-black">Register</h2>
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data" onsubmit="openLoader()">
             {% csrf_token %}
             {% if form.non_field_errors %}
                 <div class="mb-4 text-red-500 text-center">
@@ -62,7 +62,15 @@
                     </div>
                 {% endif %}
             </div>
-            <button type="submit" class="w-full bg-primary text-primary-foreground p-3 rounded-lg hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary text-white">Sign Up</button>
+            <div>
+                <button type="submit" id="NoloadingModal" class="w-full bg-primary text-primary-foreground p-3 rounded-lg text-white">Sign Up</button>
+                <div id="loadingModal" style="display: none;" class="text-white">
+                <button class="btn btn-primary" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
+            </div>
+            </div>
         </form>
     </div>
 </div>
