--- a/templates/administration/add_student.html
+++ b/templates/administration/add_student.html
@@ -6,10 +6,12 @@
 
 <div class="min-h-screen bg-background text-primary-foreground flex flex-col items-center justify-center">
     <h1 class="text-3xl font-bold my-8">Student Information Form</h1>
-    <form action="{% url 'add_student' user.id %}" method="post" enctype="multipart/form-data" class="bg-card p-8 rounded-lg shadow-lg w-full max-w-md">
-        {% if form.non_field_errors %}
-            <h3 class="text-2xl font-semibold text-primary text-center mb-6">{{ form.non_field_errors }}</h3>
-        {% endif %}
+    <form action="{% url 'add_student' user.id %}" onsubmit="openLoader()" method="post" enctype="multipart/form-data" class="bg-card p-8 rounded-lg shadow-lg w-full max-w-md">
+      {% if form.non_field_errors %}
+      <div class="mb-4 text-red-500 text-center">
+          {{ form.non_field_errors }}
+      </div>
+      {% endif %}
         {% csrf_token %}
       
       <div class="mb-4">
@@ -17,10 +19,6 @@
         {{ form.student_class }}
       </div>
   
-      <div class="mb-6">
-        {{ form.phone_number.label_tag }}
-        {{ form.phone_number }}
-      </div>
       <div class="mb-6">
         {{ form.home_address.label_tag }}
         {{form.home_address}}
@@ -39,10 +37,21 @@
       <div class="mb-4">
         {{ form.parent_email.label_tag }}
         {{form.parent_email}}
+        {% if form.parent_email.errors %}
+        <div class="text-red-500">
+        {{ form.parent_email.errors }}
+        </div>
+        {% endif %}
       </div>
   
-      <button type="submit" class="bg-primary text-primary-foreground hover:bg-primary/80 mt-4 px-4 py-2 rounded-md">Submit</button>
-    </form>
+      <div>
+        <button type="submit" id="NoloadingModal" class="w-full bg-primary text-primary-foreground p-3 rounded-lg text-white">Join Class</button>
+        <div id="loadingModal" style="display: none;" class="text-white">
+        <button class="btn btn-primary" type="button" disabled>
+          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+          Loading...
+        </button>
+    </div>    </form>
   </div>
 
 {%endblock content%}
