--- a/templates/dashboards/all_admin_pages/Annoucement.html
+++ b/templates/dashboards/all_admin_pages/Annoucement.html
@@ -4,7 +4,7 @@
 
 <div class="m-3 text-black rounded-lg">
     {%if request.user.is_superuser%}
-    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_annoucement'%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Annoucement</span></a></p>
+    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_all_annoucement'%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Annoucement</span></a></p>
      {%else%}
     {%endif%}
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL Annoucement</p>
