--- a/templates/dashboards/all_teacher_pages/class_details.html
+++ b/templates/dashboards/all_teacher_pages/class_details.html
@@ -10,8 +10,8 @@
     {% endfor %}
     {% endif %}
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">{{class.name}} STUDENTS</p>
-    <div class="order flex item-center">
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+    <div class="order">
+        <div class="flex flex-wrap gap-3">
             {%if students%}
             {%for student in students%}
             <a href="{% url 'teacher_class_student_details' student_id=student.user.id %}">
@@ -29,8 +29,8 @@
     </div>
 
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 mt-3" style="background-color: #F9F9F9;">{{class.name}} TEACHERS</p>
-    <div class="order flex">
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+    <div class="order">
+        <div class="flex flex-wrap gap-3">
             {%if teachers%}
             {%for teacher in teachers%}
             <a href="{% url 'teacher_detail' teacher_id=teacher.user.id%}">
