--- a/templates/dashboards/all_admin_pages/base.html
+++ b/templates/dashboards/all_admin_pages/base.html
@@ -45,13 +45,13 @@
             </li>
             <li class="{% if request.path == choose_class_timetable %}active{% endif %}">
                 <a href="{{choose_class_timetable}}">
-                    <i class='bx bxs-building-house' ></i>
+                    <i class='bx bx-table'></i></i>
                     <span class="text">Create Timetable</span>
                 </a>
             </li>
             <li class="{% if request.path == subject_list %}active{% endif %}">
                 <a href="{{subject_list}}">
-                    <i class='bx bxs-book-reader' ></i>
+                    <i class='bx bxs-book'></i>
                     <span class="text">Subject</span>
                 </a>
             </li>
@@ -60,7 +60,7 @@
         <ul class="side-menu">
         <li class="{% if request.path == all_annoucement %}active{% endif %}">
             <a href="{{all_annoucement}}">
-                <i class='bx bxs-book-reader' ></i>
+                <i class='bx bxs-volume-full' ></i>
                 <span class="text">Announcements</span>
             </a>
         </li>
