--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -3,8 +3,8 @@
 {% block section %}
 <div class="m-3 rounded-lg mb-3">
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">{{class.name}} STUDENTS</p>
-    <div class="order flex">
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+    <div class="order">
+        <div class="flex flex-wrap gap-3">
             {%if student%}
             {%for students in student%}
             <a href="{% url 'student_detail' user_id=students.user.id %}">
@@ -21,8 +21,8 @@
     </div>
 
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 mt-3" style="background-color: #F9F9F9;">{{class.name}} TEACHERS</p>
-    <div class="order flex">
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+    <div class="order">
+        <div class="flex flex-wrap gap-3">
             {%if teacher%}
             {%for teachers in teacher%}
             <a href="{% url 'teacher_detail' user_id=teachers.user.id %}">
