--- a/templates/dashboards/all_teacher_pages/grade_student_list.html
+++ b/templates/dashboards/all_teacher_pages/grade_student_list.html
@@ -3,8 +3,8 @@
 {% block section %}
 <div class="m-3 rounded-lg mb-3">
 <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">{{classes.name}}  STUDENTS</p>
-    <div class="order flex">
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+    <div class="order">
+        <div class="flex flex-wrap gap-3">
             {%if students%}
             {%for student in students%}
             <a href="{%url 'grade_student' student_id=student.id%}">
