--- a/templates/administration/add_teacher.html
+++ b/templates/administration/add_teacher.html
@@ -39,7 +39,7 @@
         {{form.emergency_contact}}
       </div>
   
-      <button type="submit" class="bg-primary text-primary-foreground hover:bg-primary/80 mt-4 px-4 py-2 rounded-md">Submit</button>
+      <button type="submit" class="bg-primary text-white hover:bg-primary/80 mt-4 px-4 py-2 rounded-md">Submit</button>
     </form>
   </div>
 
