--- a/templates/administration/dashboard.html
+++ b/templates/administration/dashboard.html
@@ -26,21 +26,21 @@
                 <li>
                     <i class='bx bxs-calendar-check'></i>
                     <span class="text">
-                        <h3>1020</h3>
+                        <h3>{{all_teachers}}</h3>
                         <p>Total Teachers</p>
                     </span>
                 </li>
                 <li>
                     <i class='bx bxs-group'></i>
                     <span class="text">
-                        <h3>2837</h3>
+                        <h3>{{all_students}}</h3>
                         <p>Total Students</p>
                     </span>
                 </li>
                 <li>
                     <i class='bx bxs-dollar-circle'></i>
                     <span class="text">
-                        <h3>2543</h3>
+                        <h3>{{all_users}}</h3>
                         <p>Total Users</p>
                     </span>
                 </li>
