--- a/templates/dashboards/all_student_pages/students.html
+++ b/templates/dashboards/all_student_pages/students.html
@@ -126,7 +126,7 @@
                 <li>
                     <i class='bx bxs-calendar-check'></i>
                     <span class="text">
-                        <h3>10</h3>
+                        <h3>{{total_teachers}}</h3>
                         <p>Total Class Teachers</p>
                     </span>
                 </li>
