--- a/templates/dashboards/all_teacher_pages/teachers.html
+++ b/templates/dashboards/all_teacher_pages/teachers.html
@@ -113,14 +113,14 @@
                 <li>
                     <i class='bx bxs-calendar-check'></i>
                     <span class="text">
-                        <h3>3</h3>
+                        <h3>{{classes_count}}</h3>
                         <p>Total Classes</p>
                     </span>
                 </li>
                 <li>
                     <i class='bx bxs-group'></i>
                     <span class="text">
-                        <h3>2837</h3>
+                        <h3>{{all_teachers}}</h3>
                         <p>Total Teachers</p>
                     </span>
                 </li>
