--- a/templates/dashboards/all_admin_pages/myClass.html
+++ b/templates/dashboards/all_admin_pages/myClass.html
@@ -14,7 +14,7 @@
         {%if class%}
         {%for classes in class%}
         <a href="{%url 'class_details' user_id=classes.id%}">
-            <li class="p-5 rounded-lg font-medium text-gray-700" style="background-color: #F9F9F9;">{{classes.name}}</li>
+            <li class="p-5 rounded-lg font-medium text-gray-700 w-32" style="background-color: #F9F9F9;">{{classes.name}}</li>
         </a>
         {%endfor%}
         {%endif%}
