--- a/templates/dashboards/all_student_pages/students.html
+++ b/templates/dashboards/all_student_pages/students.html
@@ -133,7 +133,7 @@
                 <li>
                     <i class='bx bxs-group'></i>
                     <span class="text">
-                        <h3>37</h3>
+                        <h3>{{total_student}}</h3>
                         <p>Total Students In Your Class</p>
                     </span>
                 </li>
